# optparse-declarative

./: .editorconfig  .gitignore  .stylish-haskell.yaml  CONTRIBUTING.md  ChangeLog.md  LICENSE  Makefile  README.md  cabal.project  cabal.project.8.10.1.freeze  cabal.project.8.6.5.freeze  cabal.project.8.8.3.freeze  cabal.project.9.10.2.freeze  cabal.project.9.12.2.freeze  cabal.project.9.2.8.freeze  cabal.project.9.4.4.freeze  cabal.project.9.6.2.freeze  cabal.project.9.8.4.freeze  flake.nix  hie.yaml  optparse-declarative.cabal
.github/workflows/: test.yaml
example/: bool.hs  list.hs  nonstrargs.hs  optparse-declarative-example.cabal  simple.hs  subcmd.hs  test.hs  verbose.hs
src/Options/: Declarative.hs
