name:                optparse-declarative
version:             0.1.0
synopsis:            Declarative command line option parser
description:         Declarative and easy to use command line option parser
homepage:            https://github.com/tanakh/optparse-declarative
license:             MIT
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
copyright:           (c) Hideyuki Tanaka 2015
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md
                     ChangeLog.md
                     example/*.hs

source-repository head
  type:     git
  location: https://github.com/tanakh/optparse-declarative.git

library
  hs-source-dirs:      src
  exposed-modules:     Options.Declarative
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , mtl
                     , monad-logger
                     , bytestring
                     , fast-logger
