cabal-version:       2.2
name:                optparse-declarative
version:             0.3.0
synopsis:            Declarative command line option parser
description:         Declarative and easy to use command line option parser
homepage:            https://github.com/tanakh/optparse-declarative
license:             MIT
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
copyright:           (c) Hideyuki Tanaka 2015
category:            System
build-type:          Simple

extra-source-files:  README.md
                     ChangeLog.md
                     example/*.hs

source-repository head
  type:     git
  location: https://github.com/tanakh/optparse-declarative.git

common common
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: Options.Declarative
  build-depends:   mtl

executable example-simple
  import:         common
  main-is:        simple.hs
  hs-source-dirs: example
  build-depends:  optparse-declarative
                , mtl

executable example-subcmd
  import:         common
  main-is:        subcmd.hs
  hs-source-dirs: example
  build-depends:  optparse-declarative
                , mtl

executable example-verbose
  import:         common
  main-is:        verbose.hs
  hs-source-dirs: example
  build-depends:  optparse-declarative
                , mtl

executable example-nonstrargs
  import:         common
  main-is:        nonstrargs.hs
  hs-source-dirs: example
  build-depends:  optparse-declarative
                , mtl
