cabal-version:       2.2
name:                optparse-declarative
version:             0.4.2
synopsis:            Declarative command line option parser
description:         Declarative and easy to use command line option parser
homepage:            https://github.com/tanakh/optparse-declarative
license:             MIT
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com, kazuki.okamoto@kakkun61.com
copyright:           2020 Kazuki Okamoto (岡本和樹), (c) Hideyuki Tanaka 2015
category:            System
build-type:          Simple

extra-source-files:  README.md
                     ChangeLog.md
                     example/*.hs

source-repository head
  type:     git
  location: https://github.com/tanakh/optparse-declarative.git

library
  hs-source-dirs:   src
  exposed-modules:  Options.Declarative
  build-depends:    base >=4.7 && <5
                  , exceptions
                  , mtl
  default-language: Haskell2010
